--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,12 +4,18 @@ on:
   push:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: zip -r resourcepack.zip . -x ".*"
-      - uses: actions/upload-artifact@v3
-        with:
-          path: resourcepack.zip
+      - run: |
+          zip -x ".*" -r resourcepack.zip .
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add resourcepack.zip
+          git commit -m "Auto generate resourcepack.zip"
+          git push
