--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          zip -r resourcepack.zip . -x .*
+          rm resourcepack.zip
+          zip -r resourcepack.zip . -x ".\*" 
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add resourcepack.zip
