--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           rm resourcepack.zip
-          zip -r resourcepack.zip . -x ".\*" 
+          zip -r resourcepack.zip . -x ".*" 
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add resourcepack.zip
