--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: download
+          clean: false
       
       - name: Auto generate resourcepack.zip
         run: |
